@@ -1,6 +1,5 @@
 NAME
-    Cpanel::JSON::XS - JSON::XS for Cpanel, fast and correct serialising,
-    also for 5.6.2
+    Cpanel::JSON::XS - Cpanel fork of JSON::XS, fast and correct serialising
 
 SYNOPSIS
      use Cpanel::JSON::XS;
@@ -98,8 +97,8 @@ DESCRIPTION
 
     Changes to JSON::XS
 
-    - stricter decode_json() as documented. non-refs are disallowed.
-    decode() honors now allow_nonref.
+    - stricter decode_json() as documented. non-refs are disallowed. added a
+    2nd optional argument. decode() honors now allow_nonref.
 
     - fixed encode of numbers for dual-vars. Different string
     representations are preserved, but numbers with temporary strings which
@@ -123,6 +122,9 @@ DESCRIPTION
     - native boolean mapping of yes and no to true and false, as in
     YAML::XS. In perl "!0" is yes, "!1" is no. The JSON value true maps to
     1, false maps to 0. [#39]
+
+    - support arbitrary stringification with encode, with convert_blessed
+    and allow_blessed.
 
     - ithread support. Cpanel::JSON::XS is thread-safe, JSON::XS not
 
@@ -149,6 +151,8 @@ DESCRIPTION
     published production module, just during development and testing.
 
     - extended testsuite
+
+    - support many more options and methods from JSON::PP
 
 FUNCTIONAL INTERFACE
     The following convenience methods are provided by this module. They are
@@ -497,6 +501,13 @@ OBJECT-ORIENTED INTERFACE
                 { 'foo':"bar" }
                 { 'foo':'bar' }
 
+        *   allow_barekey
+
+            Accept unquoted object keys instead of with mandatory double
+            quotes. See the "allow_barekey" option.
+
+                { foo:"bar" }
+
     $json = $json->canonical ([$enable])
     $enabled = $json->get_canonical
         If $enable is true (or missing), then the "encode" method will
@@ -559,7 +570,7 @@ OBJECT-ORIENTED INTERFACE
         If $enable is true (or missing), then "decode" will accept bare keys
         of JSON object that are invalid JSON format.
 
-        As same as the "relaxed" option, this option may be used to parse
+        Same as with the "relaxed" option, this option may be used to parse
         application-specific files written by humans.
 
             $json->allow_barekey->decode('{foo:"bar"}');
