@@ -4,14 +4,11 @@ use strict;
 use Cpanel::JSON::XS;
 #########################
 
-my $json = Cpanel::JSON::XS->new->allow_nonref;
+my $json = Cpanel::JSON::XS->new;
 
 eval q| $json->decode('{foo:"bar"}') |;
-
 ok($@); # in XS and PP, the error message differs.
 
 $json->allow_barekey;
-
 is($json->decode('{foo:"bar"}')->{foo}, 'bar');
-
 
